# cheetiming

./: .coderabbit.yaml  .gitignore  README.md  example_usage.py  pyproject.toml
cheetiming/: __init__.py  timer.py
src/cheetiming/: __init__.py  timer_manager.py  timing_session.py
tests/: test_.py
