[build-system]
requires = ["setuptools>=61.0", "PyYAML"]
build-backend = "setuptools.build_meta"


[project]
name = "cheetiming"
authors = [
  { name="OK111", email="oleg.khadartsev@gmail.com" },
]
description = "A package for timing with zero overhead"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [

]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "docgen_mlg.__version__"}

[project.urls]
"Homepage" = "https://tfs.mlg.ru/Medialogia/ds/_git/docgen-mlg"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]